--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -65,30 +65,30 @@
 
               <div class="button-group">
                 <button
-                  class="gnb-icon-button lg-hidden"
+                  class="gnb-icon-btn lg-hidden"
                   type="button"
                   aria-label="검색창 열기 버튼"
                 >
                   <i class="ic-search"></i>
                 </button>
 
-                <a class="gnb-icon-button sm-hidden" href="/">
+                <a class="gnb-icon-btn sm-hidden" href="/">
                   <i
                     class="ic-bookmark"
                     aria-label="스크랩북 페이지로 이동"
                   ></i>
                 </a>
 
-                <a class="gnb-icon-button sm-hidden" href="/">
+                <a class="gnb-icon-btn sm-hidden" href="/">
                   <i class="ic-bell" aria-label="내 소식 페이지로 이동"></i>
                 </a>
 
-                <a class="gnb-icon-button" href="/">
+                <a class="gnb-icon-btn" href="/">
                   <i class="ic-cart" aria-label="장바구니 페이지로 이동"></i>
                 </a>
 
                 <button
-                  class="gnb-avatar-button sm-hidden"
+                  class="gnb-avatar-btn sm-hidden"
                   type="button"
                   aria-label="마이메뉴 열기 버튼"
                 >
