--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -27,84 +27,86 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <div class="gnb-left">
-              <h1 class="logo">
-                <a href="/">
-                  <img src="./assets/images/Logo.svg" alt="내일의집" />
-                </a>
-              </h1>
+            <div class="gnb-wrapper">
+              <div class="gnb-left">
+                <h1 class="logo">
+                  <a href="/">
+                    <img src="./assets/images/Logo.svg" alt="내일의집" />
+                  </a>
+                </h1>
 
-              <nav class="gnb-nav sm-hidden">
-                <h2 class="visually-hidden">메뉴</h2>
-                <!-- nav 내에는 heading이 있어야 한다. -->
-                <ul class="gnb-nav-list">
-                  <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                  <li class="gnb-nav-item"><a href="/">스토어</a></li>
-                  <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
-                </ul>
-              </nav>
+                <nav class="gnb-nav sm-hidden">
+                  <h2 class="visually-hidden">메뉴</h2>
+                  <!-- nav 내에는 heading이 있어야 한다. -->
+                  <ul class="gnb-nav-list">
+                    <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
+                    <li class="gnb-nav-item"><a href="/">스토어</a></li>
+                    <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
+                  </ul>
+                </nav>
 
-              <button
-                class="gnb-icon-btn sm-only"
-                type="button"
-                aria-label="메뉴 열기 버튼"
-              >
-                <i class="ic-menu"></i>
-              </button>
-            </div>
-
-            <div class="gnb-right">
-              <div class="input-group lg-only">
-                <i class="ic-search"></i>
-                <input
-                  type="text"
-                  class="form-input"
-                  placeholder="스토어 검색"
-                />
+                <button
+                  class="gnb-menu-btn gnb-icon-btn sm-only"
+                  type="button"
+                  aria-label="메뉴 열기 버튼"
+                >
+                  <i class="ic-menu"></i>
+                </button>
               </div>
 
-              <div class="button-group">
-                <button
-                  class="gnb-icon-btn lg-hidden"
-                  type="button"
-                  aria-label="검색창 열기 버튼"
-                >
+              <div class="gnb-right">
+                <div class="input-group lg-only">
                   <i class="ic-search"></i>
-                </button>
+                  <input
+                    type="text"
+                    class="form-input"
+                    placeholder="스토어 검색"
+                  />
+                </div>
 
-                <a class="gnb-icon-btn sm-hidden" href="/">
-                  <i
-                    class="ic-bookmark"
-                    aria-label="스크랩북 페이지로 이동"
-                  ></i>
-                </a>
+                <div class="button-group">
+                  <button
+                    class="gnb-search-btn gnb-icon-btn lg-hidden"
+                    type="button"
+                    aria-label="검색창 열기 버튼"
+                  >
+                    <i class="ic-search"></i>
+                  </button>
 
-                <a class="gnb-icon-btn sm-hidden" href="/">
-                  <i class="ic-bell" aria-label="내 소식 페이지로 이동"></i>
-                </a>
+                  <a class="gnb-icon-btn sm-hidden" href="/">
+                    <i
+                      class="ic-bookmark"
+                      aria-label="스크랩북 페이지로 이동"
+                    ></i>
+                  </a>
 
-                <a class="gnb-icon-btn" href="/">
-                  <i class="ic-cart" aria-label="장바구니 페이지로 이동"></i>
-                </a>
+                  <a class="gnb-icon-btn sm-hidden" href="/">
+                    <i class="ic-bell" aria-label="내 소식 페이지로 이동"></i>
+                  </a>
 
-                <button
-                  class="gnb-avatar-btn sm-hidden"
-                  type="button"
-                  aria-label="마이메뉴 열기 버튼"
-                >
-                  <div class="avatar-32">
-                    <img
-                      src="./assets/images/img-user-01.jpg"
-                      alt="사딸라아저씨"
-                    />
-                  </div>
+                  <a class="gnb-icon-btn" href="/">
+                    <i class="ic-cart" aria-label="장바구니 페이지로 이동"></i>
+                  </a>
+
+                  <button
+                    class="gnb-avatar-btn sm-hidden"
+                    type="button"
+                    aria-label="마이메뉴 열기 버튼"
+                  >
+                    <div class="avatar-32">
+                      <img
+                        src="./assets/images/img-user-01.jpg"
+                        alt="사딸라아저씨"
+                      />
+                    </div>
+                  </button>
+                </div>
+
+                <button class="btn-primary btn-40 sm-hidden" type="button">
+                  글쓰기
+                  <i class="ic-chevron" aria-hidden></i>
                 </button>
               </div>
-
-              <button class="btn-primary btn-40 sm-hidden" type="button">
-                글쓰기
-                <i class="ic-chevron" aria-hidden></i>
-              </button>
             </div>
           </div>
         </div>
