--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -46,7 +46,7 @@
                 </nav>
 
                 <button
-                  class="gnb-menu-btn gnb-icon-btn sm-only"
+                  class="gnb-icon-btn is-menu sm-only"
                   type="button"
                   aria-label="메뉴 열기 버튼"
                 >
@@ -66,7 +66,7 @@
 
                 <div class="button-group">
                   <button
-                    class="gnb-search-btn gnb-icon-btn lg-hidden"
+                    class="gnb-icon-btn is-search lg-hidden"
                     type="button"
                     aria-label="검색창 열기 버튼"
                   >
