--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -40,7 +40,9 @@
                   <!-- nav 내에는 heading이 있어야 한다. -->
                   <ul class="gnb-nav-list">
                     <li class="gnb-nav-item"><a href="/">커뮤니티</a></li>
-                    <li class="gnb-nav-item"><a href="/">스토어</a></li>
+                    <li class="gnb-nav-item is-active">
+                      <a href="/">스토어</a>
+                    </li>
                     <li class="gnb-nav-item"><a href="/">인테리어시공</a></li>
                   </ul>
                 </nav>
