Handle btn status styles and create a badge

--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -86,8 +86,13 @@
                     <i class="ic-bell" aria-label="내 소식 페이지로 이동"></i>
                   </a>
 
-                  <a class="gnb-icon-btn" href="/">
-                    <i class="ic-cart" aria-label="장바구니 페이지로 이동"></i>
+                  <a
+                    class="gnb-icon-btn is-cart"
+                    href="/"
+                    aria-label="장바구니 페이지로 이동, 5개의 상품이 장바구니에 담겨있습니다."
+                  >
+                    <i class="ic-cart"></i>
+                    <strong class="badge">9</strong>
                   </a>
 
                   <button
