--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -66,6 +66,7 @@
                   />
                 </div>
 
+                <!-- Note: 로그인을 한 경우 -->
                 <div class="button-group">
                   <button
                     class="gnb-icon-btn is-search lg-hidden"
@@ -108,6 +109,30 @@
                     </div>
                   </button>
                 </div>
+
+                <!-- Note: 로그인을 하지 않았을 경우 -->
+                <!-- <div class="button-group">
+                  <button
+                    class="gnb-icon-btn is-search lg-hidden"
+                    type="button"
+                    aria-label="검색창 열기 버튼"
+                  >
+                    <i class="ic-search"></i>
+                  </button>
+                  <a
+                    class="gnb-icon-btn is-cart"
+                    href="/"
+                    aria-label="장바구니 페이지로 이동, 5개의 상품이 장바구니에 담겨있습니다."
+                  >
+                    <i class="ic-cart"></i>
+                    <strong class="badge">9</strong>
+                  </a>
+
+                  <div class="gnb-auth sm-hidden">
+                    <a href="/">로그인</a>
+                    <a href="/">회원가입</a>
+                  </div>
+                </div> -->
 
                 <button class="btn-primary btn-40 sm-hidden" type="button">
                   글쓰기
