--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -167,7 +167,7 @@
         <!-- Note: 로그인을 한 경우 -->
         <div class="sidebar-user">
           <a href="/">
-            <div class="avatar-32">
+            <div class="avatar-24">
               <img src="./assets/images/img-user-01.jpg" alt="사딸라아저씨" />
             </div>
             <strong class="username">사달라</strong>
@@ -175,10 +175,10 @@
         </div>
 
         <!-- Note: 로그인을 하지 않은 경우 -->
-        <div class="sidebar-auth">
+        <!-- <div class="sidebar-auth">
           <a class="btn-outlined btn-40" href="/">로그인</a>
           <a class="btn-primary btn-40" href="/">회원가입</a>
-        </div>
+        </div> -->
       </header>
 
       <nav class="sidebar-nav">
