Implement an overlay component

--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -279,5 +279,185 @@
         </div>
       </nav>
     </aside>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi suscipit
+      fuga nostrum nihil animi incidunt! Dolore perferendis iure cum laudantium
+      libero totam dicta fuga quasi. Culpa repellat reiciendis distinctio magni
+      dolorem? A incidunt ipsam nisi possimus placeat expedita sequi reiciendis
+      est consectetur provident praesentium rerum similique pariatur nulla, sit
+      tempora quos. Doloremque, dolorum magnam. Reiciendis magnam quo explicabo
+      sunt soluta, cupiditate, aliquid reprehenderit temporibus earum iusto
+      animi odit maiores, officia asperiores? Praesentium, nihil esse provident
+      distinctio, odit eveniet dolores dolore dolorum corrupti, iure nulla ut.
+      Voluptates numquam harum nam quidem vero iste maxime! Officia blanditiis
+      totam facere culpa beatae, cum aperiam placeat laborum minima explicabo
+      laboriosam iure, mollitia tempore saepe. Adipisci porro dolorum itaque
+      voluptas quam delectus facilis ducimus tenetur deleniti repellat!
+      Accusamus excepturi quas consectetur exercitationem, odit perspiciatis
+      fugiat, voluptatibus consequuntur laudantium voluptate voluptas unde,
+      numquam maxime beatae sed. Culpa nihil ducimus placeat quaerat nisi
+      cumque, rem illum repudiandae impedit id ab repellendus ex sint, cum porro
+      dolore non quasi facere inventore aliquam corporis vel! Voluptatem
+      temporibus et aliquam ratione at quae modi maxime tempora, est nam eos,
+      cum debitis incidunt sed eveniet minima ab quod atque voluptatum odio
+      consequuntur doloribus qui! Deserunt aperiam saepe hic voluptate libero
+      magni accusantium ipsa quo officiis. Optio corporis quam facilis fugit
+      nulla sed necessitatibus molestias? Similique saepe praesentium rerum, sed
+      tempora ea doloribus omnis fugiat quisquam ex aliquam laborum consectetur
+      ullam libero perspiciatis deleniti ab consequatur animi? Repellat non iste
+      nisi! Soluta expedita amet nesciunt, perspiciatis dolore esse itaque quia
+      voluptas laboriosam eaque quisquam provident a voluptatum cumque
+      blanditiis recusandae dolores corporis reprehenderit ipsum ut? Magni
+      placeat sed sint repellat exercitationem harum saepe obcaecati cupiditate
+      magnam dicta rerum adipisci deserunt ratione, modi doloremque accusantium
+      vel neque. Ab aliquid beatae sapiente quibusdam aperiam ex facere illo
+      nobis, quisquam fugiat nesciunt blanditiis est magni fuga iusto voluptate
+      iste voluptates quam possimus veniam! Repellat incidunt optio libero?
+      Sapiente error tenetur ab quaerat modi minima numquam dolor repellat quos
+      quia? Dignissimos nihil cum, modi nostrum saepe aliquam recusandae soluta
+      nesciunt obcaecati, quos, amet doloribus magni accusamus fugit harum error
+      totam praesentium perspiciatis consequatur a non eos qui. Eligendi
+      explicabo animi quidem magnam corrupti sequi alias facere iusto! Quam
+      earum consequuntur a minima, atque vitae totam enim ex magnam, eos,
+      voluptatibus libero expedita error nam. Necessitatibus quae dicta, beatae
+      explicabo temporibus sequi, dolores eveniet aliquam nisi consectetur
+      doloribus? Quas nihil similique non ipsum doloremque, beatae enim
+      consequuntur.
+    </p>
+    <p>
+      Aspernatur suscipit libero itaque enim non voluptate asperiores quidem
+      ullam recusandae molestiae, eveniet explicabo porro odio. Quas, corrupti
+      ad. Suscipit, excepturi laudantium ad dolor ratione repellat, labore est
+      voluptas adipisci totam accusamus eaque tempore. Aperiam a ratione, atque,
+      cumque deserunt officia illum corrupti aliquam suscipit totam omnis unde
+      asperiores quae obcaecati dolores ipsa. Veniam blanditiis quidem at
+      reiciendis? Maxime, quia. At error et doloremque, harum fugit aliquid,
+      quas nostrum dolores quidem quisquam est sed saepe veritatis eius natus?
+      Dolore cumque voluptatum omnis nulla rerum officia aperiam enim asperiores
+      saepe, eveniet placeat amet blanditiis. Facere voluptatibus magni vero
+      quibusdam nisi accusamus, repellat hic totam atque ad, laudantium, error
+      natus a maiores sed odit velit neque. Debitis itaque voluptatum et placeat
+      suscipit quas nisi repudiandae nobis dolorem recusandae, nostrum tenetur
+      laborum sequi delectus dolor pariatur velit, provident laudantium veniam
+      fugiat! Corporis sapiente repellat quisquam, tenetur voluptatem minima
+      nostrum quidem nesciunt nihil dolore dicta expedita officiis est omnis
+      facere. Ducimus laborum quae eveniet fugit eius culpa odio, assumenda at
+      voluptates sed quibusdam doloribus saepe velit non soluta reprehenderit
+      natus expedita iste dicta quasi cumque architecto eligendi esse numquam?
+      Veniam omnis excepturi minima sit eius, inventore incidunt sed sunt facere
+      minus debitis reprehenderit harum saepe unde reiciendis officia, sint
+      voluptatibus architecto in corrupti voluptatem dolorum? Culpa dolor earum
+      ipsa neque officia distinctio debitis veritatis quasi! Quod hic,
+      voluptates itaque recusandae nihil veniam error voluptas labore, dolorem
+      quas esse, minima porro rem atque officia molestias vero. Corporis ad quae
+      ullam labore error sint cumque dolorem adipisci alias impedit, culpa rem
+      suscipit perspiciatis iusto dicta expedita quos repellat dolore. Iure
+      exercitationem nostrum dignissimos at iusto dolorum incidunt, cum impedit
+      veniam cupiditate nulla porro, deleniti ut quisquam ducimus nemo aut
+      corrupti necessitatibus optio? Voluptatibus fugit repudiandae provident
+      eligendi a! Unde et ratione laboriosam minus obcaecati pariatur voluptas
+      culpa eligendi ad vero soluta, veniam fugit. Deleniti ab mollitia, tenetur
+      cupiditate, optio, qui perferendis nisi nemo rerum ipsa perspiciatis
+      voluptate enim at labore impedit alias? Inventore eum provident deserunt
+      reiciendis earum recusandae consequuntur consequatur magnam modi quam
+      distinctio veniam ex quas, ipsa aperiam harum labore totam doloremque
+      exercitationem repudiandae nemo quae porro quis delectus? Nostrum a esse
+      expedita, dolorum iste laboriosam magnam molestias veritatis tempora quo,
+      laudantium enim assumenda ex earum quod numquam architecto in quidem quia
+      tempore aliquid officiis tenetur, incidunt saepe! Libero, adipisci
+      pariatur sunt exercitationem cupiditate vel, modi laboriosam minima iste
+      assumenda, architecto repellendus beatae cumque?
+    </p>
+    <p>
+      Exercitationem, accusamus voluptatum. Recusandae, cumque labore temporibus
+      voluptatem mollitia culpa incidunt quisquam at libero porro magnam maiores
+      debitis quis sequi iusto tenetur excepturi molestiae! Laudantium, laborum
+      nulla sed magni odio repellat voluptatibus mollitia alias aliquid animi.
+      Ipsum unde fuga reiciendis voluptate totam ad nulla sapiente, doloremque
+      laboriosam minus veniam perspiciatis commodi voluptates natus quae
+      possimus perferendis in consequuntur aperiam placeat sunt vel. Esse
+      dolorum neque eum sed sunt quam minus a. Neque corporis soluta ipsa quos
+      rerum minima quo architecto quod sint. Fugiat enim rerum dignissimos eaque
+      necessitatibus id veritatis reiciendis atque officiis. Laboriosam veniam
+      adipisci delectus, cum iusto eligendi voluptas necessitatibus repudiandae
+      voluptates fugit cumque dolorem qui! Laboriosam saepe voluptatum qui? Modi
+      illum repellendus aperiam voluptatum fugiat quia at error? Perferendis
+      totam nemo natus sapiente deleniti, deserunt quos ut temporibus eligendi
+      tenetur nobis laborum consequuntur aliquid! Porro molestiae veniam quas
+      tempora earum vitae! Dolorum ratione, sequi minus libero, doloremque enim
+      soluta a ullam tempore vel magni tempora, quos in amet quia impedit
+      placeat nisi rem reiciendis eligendi voluptatum ipsam illo? Ad, quidem non
+      voluptatum sint, necessitatibus odit provident dolor quasi amet enim
+      deserunt nihil deleniti animi voluptates ut dicta harum quisquam error
+      sit! Quas iste, culpa alias autem obcaecati aliquid natus iure hic
+      voluptas. Ut molestiae alias amet excepturi, inventore eveniet eaque
+      tenetur sed adipisci doloribus. Sapiente voluptatem iure dolores alias
+      quasi assumenda quod nostrum, aspernatur veritatis architecto. Magni
+      temporibus molestiae pariatur nostrum harum doloribus, atque, illo
+      veritatis saepe laudantium non illum nesciunt. Fuga placeat hic
+      consequatur eligendi voluptas rem unde? Saepe quo ipsa laudantium a, neque
+      vel dolores sint consectetur necessitatibus quasi, libero eos nostrum
+      exercitationem, qui officia omnis incidunt quis similique molestias velit
+      nobis consequatur? Voluptas pariatur veritatis incidunt amet cupiditate
+      omnis similique hic illo, eaque nihil, dolor nesciunt maiores rerum
+      tempore praesentium dignissimos obcaecati debitis, magni nostrum? Labore
+      officiis quam repellendus dolorem dolore nulla, pariatur magnam tenetur
+      deserunt neque, adipisci aliquam ipsam aperiam, error dolor. Nesciunt aut
+      eos laudantium ratione, nulla nam? Aperiam facere quas earum tenetur
+      consectetur autem tempore quisquam! Dolore explicabo modi saepe provident
+      voluptatem quidem, voluptatum neque repellendus sed enim dolores cum velit
+      nesciunt magnam odit deleniti voluptas delectus repellat rerum
+      perferendis. Alias natus dolore numquam pariatur deleniti, ipsam inventore
+      nobis vitae ducimus omnis odio voluptates impedit voluptatum dicta
+      consequatur, error nulla facilis. Officia distinctio perferendis quam,
+      minima amet sequi fugit consequuntur saepe magni, facere, ab rerum quidem!
+      Numquam quisquam laboriosam fugiat laudantium.
+    </p>
+    <p>
+      Fugiat placeat ad perspiciatis atque, doloremque nobis quibusdam debitis
+      perferendis alias iure odio totam repudiandae delectus. Unde reprehenderit
+      distinctio perferendis a dolorum quam accusamus, ad eos ipsum neque eaque,
+      nesciunt quia repellat inventore consequuntur soluta ipsam, culpa natus
+      harum perspiciatis et esse! Quisquam provident incidunt deserunt velit
+      quia eligendi laboriosam corrupti dolor eveniet impedit iste dolorem
+      possimus autem cumque nobis, architecto repellat libero reprehenderit
+      nesciunt dignissimos harum aliquam? Similique, labore dolor! Nemo quam
+      quisquam quaerat voluptatum asperiores natus similique error ea quae
+      deleniti iusto quia, eveniet autem ab aperiam incidunt sint assumenda eum
+      eos amet quas vel vitae? Autem voluptatibus iste quisquam minima, quod
+      dolores corrupti dolor velit ut inventore, libero impedit beatae fugit
+      quasi sequi iure. Nam doloremque fugit maxime vitae quas nobis non,
+      corporis reprehenderit possimus perferendis temporibus placeat optio fuga
+      modi eum ratione. Quia quasi voluptatibus optio tempora, dignissimos
+      rerum. Aspernatur, nesciunt? Inventore asperiores sunt, vel incidunt id
+      sed provident assumenda distinctio similique voluptate enim recusandae
+      doloremque ab quo veritatis deleniti, fugiat eius ut non fuga, quia quidem
+      nisi. Amet esse vitae impedit eius, molestias consectetur fuga reiciendis
+      aspernatur ad deleniti nam asperiores natus aliquam molestiae ducimus est
+      quos facere saepe atque? Sit officia, soluta inventore aut quo quae fugiat
+      itaque expedita accusantium nemo? Saepe qui repellendus culpa debitis
+      adipisci modi facere autem voluptatem temporibus fugiat veniam aperiam
+      unde vero nostrum maiores magni consectetur libero minima, perspiciatis
+      ullam nihil? Culpa quaerat dicta voluptas, explicabo omnis quia veniam
+      sunt voluptate repudiandae porro modi nostrum ipsa quas. Architecto nobis
+      cum iure possimus soluta facilis veniam ullam perferendis debitis,
+      deserunt eaque unde laudantium aspernatur, adipisci sunt deleniti ducimus
+      repellendus! Nisi cupiditate ipsam accusantium harum necessitatibus non
+      consequatur eaque earum asperiores vel enim minus perspiciatis
+      voluptatibus, placeat officia unde. Amet qui placeat quas quae laboriosam
+      voluptatum unde maxime perspiciatis a fugiat eum assumenda enim minima,
+      iste quam numquam ut libero. Quibusdam possimus eos aspernatur voluptate
+      animi necessitatibus id expedita quo at deleniti magnam eaque voluptas
+      facere rerum voluptatem error voluptatibus, quos sed. Aperiam quod maxime
+      nobis perferendis asperiores, nemo tempora fuga enim, vel facilis eaque at
+      odit vitae similique necessitatibus blanditiis sint officiis possimus,
+      veniam omnis animi nesciunt amet unde expedita. Blanditiis modi autem
+      nulla ex excepturi, eligendi saepe neque rerum distinctio magni voluptate
+      similique aliquam reiciendis itaque voluptatibus facere, veritatis
+      obcaecati alias commodi? Tempora non nam laboriosam optio labore fuga, in
+      fugit minima hic ad? Aliquam harum aliquid molestias a.
+    </p>
+    <div class="overlay" aria-hidden></div>
   </body>
 </html>
