--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -295,7 +295,7 @@
                     placeholder="스토어 검색"
                   />
                 </div>
-                <button class="btn-ghose btn-40" type="button">취소</button>
+                <button class="btn-ghost btn-40" type="button">취소</button>
               </div>
             </header>
 
