--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -342,9 +342,9 @@
               </div>
 
               <!-- NOTE: 최근 검색어가 없는 경우 -->
-              <div class="search-history-content">
+              <!-- <div class="search-history-content">
                 <p class="placeholder">최근 검색한 내역이 없습니다.</p>
-              </div>
+              </div> -->
             </section>
           </div>
         </div>
