--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -96,9 +96,9 @@
                     <strong class="badge">9</strong>
                   </a>
 
-                  <div class="my-menu sm-hidden">
+                  <div class="my-menu sm-hidden is-active">
                     <button
-                      class="my-menu-btn is-active"
+                      class="my-menu-btn"
                       type="button"
                       aria-label="마이메뉴 열기 버튼"
                     >
