--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -57,13 +57,59 @@
               </div>
 
               <div class="gnb-right">
-                <div class="input-group lg-only">
-                  <i class="ic-search"></i>
-                  <input
-                    type="text"
-                    class="form-input"
-                    placeholder="스토어 검색"
-                  />
+                <div class="gnb-search">
+                  <div class="input-group lg-only">
+                    <i class="ic-search"></i>
+                    <input
+                      type="text"
+                      class="form-input"
+                      placeholder="스토어 검색"
+                    />
+                  </div>
+
+                  <section class="search-history is-active">
+                    <header class="search-history-header">
+                      <h2 class="title">최근 검색어</h2>
+                      <button type="button">전체 삭제</button>
+                    </header>
+
+                    <div class="search-history-content">
+                      <ol class="search-history-list">
+                        <li class="search-history-item">
+                          <button class="word-btn" type="button">김버그</button>
+                          <button
+                            class="delete-btn"
+                            type="button"
+                            aria-label="검색어 삭제"
+                          >
+                            <i class="ic-close"></i>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-btn" type="button">버그</button>
+                          <button
+                            class="delete-btn"
+                            type="button"
+                            aria-label="검색어 삭제"
+                          >
+                            <i class="ic-close"></i>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-btn" type="button">
+                            튕김버그
+                          </button>
+                          <button
+                            class="delete-btn"
+                            type="button"
+                            aria-label="검색어 삭제"
+                          >
+                            <i class="ic-close"></i>
+                          </button>
+                        </li>
+                      </ol>
+                    </div>
+                  </section>
                 </div>
 
                 <!-- Note: 로그인을 한 경우 -->
@@ -96,7 +142,7 @@
                     <strong class="badge">9</strong>
                   </a>
 
-                  <div class="my-menu sm-hidden is-active">
+                  <div class="my-menu sm-hidden">
                     <button
                       class="my-menu-btn"
                       type="button"
