--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -57,12 +57,12 @@
               </div>
 
               <div class="gnb-right">
-                <div class="gnb-search">
-                  <div class="input-group lg-only">
-                    <i class="ic-search"></i>
+                <div class="gnb-search lg-only">
+                  <div class="input-group">
+                    <i class="ic-search" aria-hidden></i>
                     <input
-                      type="text"
                       class="form-input"
+                      type="text"
                       placeholder="스토어 검색"
                     />
                   </div>
