--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -20,6 +20,14 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
+    />
+    <!--[if (lt IE 9)
+      ]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script
+    ><![endif]-->
+
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -613,5 +621,8 @@
     </aside>
 
     <div class="overlay" aria-hidden></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="./js/productCarousel.js"></script>
   </body>
 </html>
