--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -457,7 +457,7 @@
 
               <div class="product-info-delivery">
                 <span>일반택배</span>
-                <strong class="tag-red"> 무료배송 </strong>
+                <strong class="tag-gray"> 무료배송 </strong>
               </div>
             </section>
           </div>
