Create a shared component: product table

--- a/tomorrow-house/components.html
+++ b/tomorrow-house/components.html
@@ -198,5 +198,55 @@
         </button>
       </header>
     </div>
+
+    <div class="container">
+      <table class="product-table">
+        <tbody>
+          <tr>
+            <th scope="row">배송</th>
+            <td>일반택배</td>
+          </tr>
+          <tr>
+            <th scope="row">반품배송비</th>
+            <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+          </tr>
+          <tr>
+            <th scope="row">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero
+              rerum, a necessitatibus natus repudiandae similique doloribus
+              ratione doloremque distinctio molestias adipisci temporibus veniam
+              possimus. Totam, eos fugiat. Magni, corporis dignissimos.
+            </th>
+            <td>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Inventore doloribus tempore, pariatur, asperiores laudantium
+              voluptate fugiat temporibus aliquid consequuntur sed obcaecati.
+              Fuga laboriosam velit voluptate fugit alias quisquam veniam quae,
+              ratione beatae dignissimos ducimus et reiciendis vitae esse
+              obcaecati! Similique in deleniti libero magnam fugit nam et aut
+              corrupti eius. Dignissimos doloribus natus corporis maiores non
+              suscipit eaque aliquam iste incidunt sequi nemo consequatur
+              voluptatum, explicabo voluptate. Iusto libero officia accusamus
+              dolor dolorum reprehenderit animi, minima corrupti corporis!
+              Beatae inventore labore perferendis, sit impedit at eligendi
+              doloribus veritatis obcaecati sint repudiandae quaerat facilis
+              harum explicabo. Mollitia dignissimos sit, quo distinctio corporis
+              quas suscipit ipsa quis voluptates dolore! Itaque distinctio in
+              explicabo, dolore quaerat voluptates dolorum esse. Ipsam impedit
+              ullam temporibus dolor vitae aliquam laboriosam repudiandae, illo
+              quam cumque dolores quibusdam deserunt iure animi veritatis
+              voluptates labore, nemo eos explicabo sit recusandae praesentium
+              ducimus, incidunt vero. Dicta officiis, rem numquam id quaerat
+              porro reprehenderit ullam hic facere molestiae aperiam molestias
+              eum mollitia illum aspernatur et vel laborum saepe perferendis
+              quasi consequatur explicabo sed! Iste voluptatem aut, assumenda
+              temporibus, repellendus dolorum quos natus sequi quasi ipsam
+              dolores suscipit officiis vel rerum ut! Beatae sapiente at, eius
+              dignissimos necessitatibus optio facere illum odio.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
