--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -557,6 +557,58 @@
           </div>
         </div>
       </div>
+
+      <div class="product-tab">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4 col-lg-8">
+              <ul tab="product-tab-list">
+                <li
+                  class="product-tab-item"
+                  role="tab"
+                  aria-labelledby="product-spec"
+                >
+                  <button type="button">상품정보</button>
+                </li>
+                <li
+                  class="product-tab-item"
+                  role="tab"
+                  aria-labelledby="product-review"
+                >
+                  <button type="button">
+                    리뷰
+                    <strong class="badge" aria-label="566개 리뷰">566</strong>
+                  </button>
+                </li>
+                <li
+                  class="product-tab-item"
+                  role="tab"
+                  aria-labelledby="product-requiry"
+                >
+                  <button type="button">
+                    문의
+                    <strong class="badge" aria-label="96개 문의">96</strong>
+                  </button>
+                </li>
+                <li
+                  class="product-tab-item"
+                  role="tab"
+                  aria-labelledby="product-shipment"
+                >
+                  <button type="button">배송/환불</button>
+                </li>
+                <li
+                  class="product-tab-item"
+                  role="tab"
+                  aria-labelledby="product-recommendation"
+                >
+                  <button type="button">상품정보</button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="global-footer">
