--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -562,7 +562,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-4 col-lg-8">
-              <ul tab="product-tab-list">
+              <ul class="product-tab-list" role="tablist">
                 <li
                   class="product-tab-item"
                   role="tab"
