--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -721,6 +721,7 @@
                 </table>
               </div>
             </section>
+            <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
       </div>
