--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -1315,6 +1315,24 @@
               </div>
             </section>
             <div class="product-section-divider sm-only" aria-hidden></div>
+
+            <!-- Note: 문의가 없는 경우 -->
+            <!-- <section
+              class="product-section product-inquiry"
+              id="product-inquiry"
+              role="tabpanel"
+            >
+              <header class="product-section-header">
+                <h1 class="title">문의</h1>
+                <strong class="badge" aria-label="0개">0</strong>
+                <a class="text-button" href="/">문의하기</a>
+              </header>
+
+              <div class="product-section-content">
+                <p class="inquiry-empty">문의 내역이 없습니다.</p>
+              </div>
+            </section>
+            <div class="product-section-divider sm-only" aria-hidden></div> -->
           </div>
         </div>
       </div>
