Add additional mark up for user-gallery structure

--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -623,29 +623,211 @@
               </a>
             </header>
             <div class="product-section-content">
-              <ol>
-                <li>
-                  <div class="gallery-card">
-                    <figure class="gallery-card-image">
-                      <img src="./assets/images/img-review-01.jpg" alt="" />
-                      <figcaption class="visually-hidden">
-                        김버그 님의 스타일링샷
-                      </figcaption>
-                    </figure>
+              <div class="user-gallery" role="region">
+                <div class="user-gallery-slider">
+                  <ol class="slider-list">
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-01.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            김버그 님의 스타일링샷
+                          </figcaption>
+                        </figure>
 
-                    <div class="gallery-card-detail">
-                      <a href="/" class="avatar-32">
-                        <img
-                          src="./assets/images/img-user-01.jpg"
-                          alt="사딸라아저씨"
-                        />
-                      </a>
-                      <a class="username" href="/">김버그</a>
-                      <span class="order">1/461</span>
-                    </div>
-                  </div>
-                </li>
-              </ol>
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="사딸라아저씨"
+                            />
+                          </a>
+                          <a class="username" href="/">김버그</a>
+                          <span class="order">1/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-02.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            우노 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="우노"
+                            />
+                          </a>
+                          <a class="username" href="/">우노</a>
+                          <span class="order">2/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-03.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            도스 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="도스"
+                            />
+                          </a>
+                          <a class="username" href="/">도스</a>
+                          <span class="order">3/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-04.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            뜨레스 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="뜨레스"
+                            />
+                          </a>
+                          <a class="username" href="/">뜨레스</a>
+                          <span class="order">4/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-05.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            꽈트로 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="꽈트로"
+                            />
+                          </a>
+                          <a class="username" href="/">꽈트로</a>
+                          <span class="order">5/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-06.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            신코 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="신코"
+                            />
+                          </a>
+                          <a class="username" href="/">신코</a>
+                          <span class="order">6/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-07.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            세이스 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="세이스"
+                            />
+                          </a>
+                          <a class="username" href="/">세이스</a>
+                          <span class="order">7/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-08.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            시에테 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="시에테"
+                            />
+                          </a>
+                          <a class="username" href="/">시에테</a>
+                          <span class="order">8/461</span>
+                        </div>
+                      </div>
+                    </li>
+
+                    <li class="slider-item">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-09.jpg" alt="" />
+                          <figcaption class="visually-hidden">
+                            오쵸 님의 스타일링샷
+                          </figcaption>
+                        </figure>
+
+                        <div class="gallery-card-detail">
+                          <a href="/" class="avatar-32">
+                            <img
+                              src="./assets/images/img-user-01.jpg"
+                              alt="오쵸"
+                            />
+                          </a>
+                          <a class="username" href="/">오쵸</a>
+                          <span class="order">9/461</span>
+                        </div>
+                      </div>
+                    </li>
+                  </ol>
+                </div>
+
+                <div class="user-gallery-thumbnail"></div>
+              </div>
             </div>
 
             <section
