Add remaining thumbnails

--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -622,6 +622,7 @@
                 <i class="ic-chevron" aria-hidden></i>
               </a>
             </header>
+
             <div class="product-section-content">
               <div class="user-gallery" role="region">
                 <div class="user-gallery-slider">
@@ -735,98 +736,57 @@
                         </div>
                       </div>
                     </li>
-
-                    <li class="slider-item">
-                      <div class="gallery-card">
-                        <figure class="gallery-card-image">
-                          <img src="./assets/images/img-review-06.jpg" alt="" />
-                          <figcaption class="visually-hidden">
-                            신코 님의 스타일링샷
-                          </figcaption>
-                        </figure>
-
-                        <div class="gallery-card-detail">
-                          <a href="/" class="avatar-32">
-                            <img
-                              src="./assets/images/img-user-01.jpg"
-                              alt="신코"
-                            />
-                          </a>
-                          <a class="username" href="/">신코</a>
-                          <span class="order">6/461</span>
-                        </div>
-                      </div>
-                    </li>
-
-                    <li class="slider-item">
-                      <div class="gallery-card">
-                        <figure class="gallery-card-image">
-                          <img src="./assets/images/img-review-07.jpg" alt="" />
-                          <figcaption class="visually-hidden">
-                            세이스 님의 스타일링샷
-                          </figcaption>
-                        </figure>
-
-                        <div class="gallery-card-detail">
-                          <a href="/" class="avatar-32">
-                            <img
-                              src="./assets/images/img-user-01.jpg"
-                              alt="세이스"
-                            />
-                          </a>
-                          <a class="username" href="/">세이스</a>
-                          <span class="order">7/461</span>
-                        </div>
-                      </div>
-                    </li>
-
-                    <li class="slider-item">
-                      <div class="gallery-card">
-                        <figure class="gallery-card-image">
-                          <img src="./assets/images/img-review-08.jpg" alt="" />
-                          <figcaption class="visually-hidden">
-                            시에테 님의 스타일링샷
-                          </figcaption>
-                        </figure>
-
-                        <div class="gallery-card-detail">
-                          <a href="/" class="avatar-32">
-                            <img
-                              src="./assets/images/img-user-01.jpg"
-                              alt="시에테"
-                            />
-                          </a>
-                          <a class="username" href="/">시에테</a>
-                          <span class="order">8/461</span>
-                        </div>
-                      </div>
-                    </li>
-
-                    <li class="slider-item">
-                      <div class="gallery-card">
-                        <figure class="gallery-card-image">
-                          <img src="./assets/images/img-review-09.jpg" alt="" />
-                          <figcaption class="visually-hidden">
-                            오쵸 님의 스타일링샷
-                          </figcaption>
-                        </figure>
-
-                        <div class="gallery-card-detail">
-                          <a href="/" class="avatar-32">
-                            <img
-                              src="./assets/images/img-user-01.jpg"
-                              alt="오쵸"
-                            />
-                          </a>
-                          <a class="username" href="/">오쵸</a>
-                          <span class="order">9/461</span>
-                        </div>
-                      </div>
-                    </li>
                   </ol>
                 </div>
 
-                <div class="user-gallery-thumbnail"></div>
+                <div class="user-gallery-thumbnail">
+                  <ol class="thumbnail-list">
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img
+                          src="./assets/images/img-review-01.jpg"
+                          alt="1번 스타일링샷"
+                        />
+                      </button>
+                    </li>
+
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img
+                          src="./assets/images/img-review-02.jpg"
+                          alt="2번 스타일링샷"
+                        />
+                      </button>
+                    </li>
+
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img
+                          src="./assets/images/img-review-03.jpg"
+                          alt="3번 스타일링샷"
+                        />
+                      </button>
+                    </li>
+
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img
+                          src="./assets/images/img-review-04.jpg"
+                          alt="4번 스타일링샷"
+                        />
+                      </button>
+                    </li>
+
+                    <li class="thumbnail-item">
+                      <button type="button">
+                        <img
+                          src="./assets/images/img-review-05.jpg"
+                          alt="5번 스타일링샷"
+                        />
+                      </button>
+                    </li>
+                  </ol>
+                </div>
               </div>
             </div>
 
