--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -627,7 +627,11 @@
               <div class="user-gallery" role="region">
                 <div class="user-gallery-slider">
                   <ol class="slider-list">
-                    <li class="slider-item">
+                    <li
+                      class="slider-item"
+                      role="tabpanel"
+                      aria-labelledby="user-gallery-tab-1"
+                    >
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-01.jpg" alt="" />
@@ -640,7 +644,7 @@
                           <a href="/" class="avatar-32">
                             <img
                               src="./assets/images/img-user-01.jpg"
-                              alt="사딸라아저씨"
+                              alt="김버그"
                             />
                           </a>
                           <a class="username" href="/">김버그</a>
@@ -649,7 +653,11 @@
                       </div>
                     </li>
 
-                    <li class="slider-item">
+                    <li
+                      class="slider-item"
+                      role="tabpanel"
+                      aria-labelledby="user-gallery-tab-2"
+                    >
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-02.jpg" alt="" />
@@ -671,7 +679,11 @@
                       </div>
                     </li>
 
-                    <li class="slider-item">
+                    <li
+                      class="slider-item"
+                      role="tabpanel"
+                      aria-labelledby="user-gallery-tab-3"
+                    >
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-03.jpg" alt="" />
@@ -693,7 +705,11 @@
                       </div>
                     </li>
 
-                    <li class="slider-item">
+                    <li
+                      class="slider-item"
+                      role="tabpanel"
+                      aria-labelledby="user-gallery-tab-4"
+                    >
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-04.jpg" alt="" />
@@ -715,7 +731,11 @@
                       </div>
                     </li>
 
-                    <li class="slider-item">
+                    <li
+                      class="slider-item"
+                      role="tabpanel"
+                      aria-labelledby="user-gallery-tab-5"
+                    >
                       <div class="gallery-card">
                         <figure class="gallery-card-image">
                           <img src="./assets/images/img-review-05.jpg" alt="" />
@@ -740,8 +760,12 @@
                 </div>
 
                 <div class="user-gallery-thumbnail">
-                  <ol class="thumbnail-list">
-                    <li class="thumbnail-item">
+                  <ol class="thumbnail-list" role="tablist">
+                    <li
+                      class="thumbnail-item"
+                      id="user-gallery-tab-1"
+                      role="tab"
+                    >
                       <button type="button">
                         <img
                           src="./assets/images/img-review-01.jpg"
@@ -750,7 +774,11 @@
                       </button>
                     </li>
 
-                    <li class="thumbnail-item">
+                    <li
+                      class="thumbnail-item"
+                      id="user-gallery-tab-2"
+                      role="tab"
+                    >
                       <button type="button">
                         <img
                           src="./assets/images/img-review-02.jpg"
@@ -759,7 +787,11 @@
                       </button>
                     </li>
 
-                    <li class="thumbnail-item">
+                    <li
+                      class="thumbnail-item"
+                      id="user-gallery-tab-3"
+                      role="tab"
+                    >
                       <button type="button">
                         <img
                           src="./assets/images/img-review-03.jpg"
@@ -768,7 +800,11 @@
                       </button>
                     </li>
 
-                    <li class="thumbnail-item">
+                    <li
+                      class="thumbnail-item"
+                      id="user-gallery-tab-4"
+                      role="tab"
+                    >
                       <button type="button">
                         <img
                           src="./assets/images/img-review-04.jpg"
@@ -777,7 +813,11 @@
                       </button>
                     </li>
 
-                    <li class="thumbnail-item">
+                    <li
+                      class="thumbnail-item"
+                      id="user-gallery-tab-5"
+                      role="tab"
+                    >
                       <button type="button">
                         <img
                           src="./assets/images/img-review-05.jpg"
