Fix a typo: className

--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -2066,7 +2066,11 @@
           </div>
 
           <div class="col-lg-4 lg-only">
-            <form class="floating-order-form" action="/" method="POST">
+            <form
+              class="floating-order-form order-form"
+              action="/"
+              method="POST"
+            >
               <div class="order-inputs">
                 <div class="select-group is-active">
                   <select
@@ -2171,13 +2175,13 @@
                   <i class="ic-bookmark" aria-hidden></i>
                 </button>
 
-                <button
+                <!-- <button
                   class="bookmark-button is-active btn-55"
                   type="button"
                   aria-label="북마크에 해제"
                 >
                   <i class="ic-bookmark-filled" aria-hidden></i>
-                </button>
+                </button> -->
 
                 <button class="btn-outlined btn-55" type="button">
                   장바구니
