--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -2577,6 +2577,29 @@
       </div>
     </aside>
 
+    <!-- Note: 북마크에 추가했을때 -->
+    <aside class="boorkmark-toast">
+      <h1 class="boorkmark-title">스크랩했습니다</h1>
+
+      <button class="close-button" type="button" aria-label="닫기">
+        <i class="ic-close" aria-hidden></i>
+      </button>
+
+      <div class="button-group">
+        <a class="btn-32 btn-outlined" href="/">스크랩북 보기</a>
+        <button class="btn-32 btn-primary" type="button">폴더에 담기</button>
+      </div>
+    </aside>
+
+    <!-- Note: 북마크에서 삭제했을때 -->
+    <aside class="boorkmark-toast">
+      <h1 class="boorkmark-title">스크랩북에서 삭제했습니다</h1>
+
+      <button class="close-button" type="button" aria-label="닫기">
+        <i class="ic-close" aria-hidden></i>
+      </button>
+    </aside>
+
     <div class="overlay" aria-hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
