Fix a typo: bookmark className

--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -2578,8 +2578,8 @@
     </aside>
 
     <!-- Note: 북마크에 추가했을때 -->
-    <aside class="boorkmark-toast">
-      <h1 class="boorkmark-title">스크랩했습니다</h1>
+    <aside class="bookmark-toast">
+      <h1 class="bookmark-title">스크랩했습니다</h1>
 
       <button class="close-button" type="button" aria-label="닫기">
         <i class="ic-close" aria-hidden></i>
@@ -2592,8 +2592,8 @@
     </aside>
 
     <!-- Note: 북마크에서 삭제했을때 -->
-    <aside class="boorkmark-toast">
-      <h1 class="boorkmark-title">스크랩북에서 삭제했습니다</h1>
+    <aside class="bookmark-toast">
+      <h1 class="bookmark-title">스크랩북에서 삭제했습니다</h1>
 
       <button class="close-button" type="button" aria-label="닫기">
         <i class="ic-close" aria-hidden></i>
