--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -2155,6 +2155,10 @@
   <script src="./js/sidebar.js"></script>
   <script src="./js/sidebar-drawer.js"></script>
   <script src="./js/section-header.js"></script>
+  <script src="./js/search-modal.js"></script>
+  <script src="./js/order-cta.js"></script>
+  <script src="./js/my-menu.js"></script>
+  <script src="./js/gnb-search.js"></script>
 </body>
 
 </html>
