--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -2160,6 +2160,7 @@
   <script src="./js/my-menu.js"></script>
   <script src="./js/gnb-search.js"></script>
   <script src="./js/review.js"></script>
+  <script src="./js/product-tab.js"></script>
 </body>
 
 </html>
