fix a typo about aria-labelledby in product-inquiry section

--- a/tomorrow-house/index.html
+++ b/tomorrow-house/index.html
@@ -634,7 +634,7 @@
                   <strong class="badge" aria-label="566개 리뷰">566</strong>
                 </button>
               </li>
-              <li class="product-tab-item" role="tab" aria-labelledby="product-requiry">
+              <li class="product-tab-item" role="tab" aria-labelledby="product-inquiry">
                 <button type="button">
                   문의
                   <strong class="badge" aria-label="96개 문의">96</strong>
@@ -1297,7 +1297,7 @@
           <section class="product-section product-inquiry is-open" id="product-inquiry" role="tabpanel">
             <header class="product-section-header">
               <h1 class="title">문의</h1>
-              <strong class="badge" aria-labelledby="96개">96</strong>
+              <strong class="badge" aria-label="96개">96</strong>
               <a class="text-button" href="/">문의하기</a>
 
               <button class="icon-button sm-only" type="button" aria-label="더보기">
